# vicare-mode

./: ANNOUNCE  Makefile.am  README  configure.ac
doc/: vicare-mode.texi
src/: vicare-font-lock.el  vicare-lists-of-symbols.el  vicare.el
